# python-backend

./: dump.rdb
github-activity-cli/: README.md  main.py  test_github_activity.py
task-tracker-cli/: README.md  main.py  task_tracker.py  task_tracker_crud.py  tasks.json  test_task_tracker.py
tmdb-cli/: README.md  main.py  requirements.txt
weather-api/: README.md  pyproject.toml
weather-api/app/: main.py
weather-api/app/tests/: test_app.py
