[tool.poetry]
name = "weather-api"
version = "0.1.0"
description = ""
authors = ["Sunil Hanamshetty <64653515+shetty456@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
redis = "^5.2.1"
httpx = "^0.28.1"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
